--- a/public/taik/main.css
+++ b/public/taik/main.css
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,300&display=swap");
 
 body {
-    background: #eee;
+    background: ##fcf9f9;
     font-family: "Roboto", sans-serif;
+}
+
+.navigasi_saya {
+    background: ##fefefe;
 }
