--- a/public/mycss/main.css
+++ b/public/mycss/main.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,300&display=swap");
 
 body {
-    background: ##fcf9f9;
+    background: #fcf9f9;
     font-family: "Roboto", sans-serif;
 }
 
