--- a/public/css/myCss.css
+++ b/public/css/myCss.css
@@ -63,6 +63,7 @@ textarea {
 .hilangkanKamera {
     transition: all 0.5s;
     transform: scale(0);
+    /* display: none; */
 }
 
 .tampilKamera {
